# IRFM

./: .gitignore  README.md  pyproject.toml
LR1/: specialities.html  specialities.xsl  transform.py
LR2/: irfm_lr2.ipynb
LR3/: cli_client.py  irfm_lr3.py
LR4/: hameleon.txt  hameleon_short.txt  main.ipynb  text_similarity_analysis.py  text_similarity_analysis_commented.py
